# flickShell

./: .gitignore  CMakeLists.txt  ExpShell.cpp  MAP.h  Makefile  README.md  Readme.md  STRING.h  VECTOR.h  bashline.cpp  bashline.h  builtin_cd.cpp  builtin_exit.cpp  builtin_help.cpp  builtin_history.cpp  builtin_type.cpp  builtin_type.h  config.h  eval.cpp  eval.h  filckShell  filckShell.cpp  flickShell.cpp  generation  generation.cpp  global.cpp  global.h  install_shell.sh  install_shell.template  line.cpp  line.h  p  panic.cpp  panic.h  print.cpp  shell.cpp  shell.h
builtins/: alias.cpp  alias.h  builtins.cpp  builtins.h  cd.cpp  cd.h  exit.cpp  exit.h  export.cpp  export.h  help.cpp  help.h  history.cpp  history.h  type.cpp  type.h
